# Restorer

./: .gitignore  0_align_images.ipynb  0_produce_small_dataset.ipynb  0_produce_small_dataset_raw.ipynb  1_compute_exposure.ipynb  1_pretrain_model.ipynb  1_pretrain_model_raw.ipynb  1_train_model_raw.ipynb  1_train_model_raw_demosaicing.ipynb  1_validate_model.ipynb  1_validated_raw_demosaicing.ipynb  1_visualize_alignment.ipynb  2_finetune_model_raw.ipynb  2_pretrain_model_raw.ipynb  3_make_script.ipynb  README.md  config.yaml  config_collab.yaml  config_demosaicing.yaml  download_rawnind.sh  pyproject.toml  test_naf_ssid.ipynb
.github/workflows/: ci.yml
ConvNeXtUNet/: convnextv2_unet.py
examples/: simple_denoising.ipynb
models/: convnextv2_style_blocks.py  convnextv2_unet.py
models/losses/: MultiScaleLoss.py
src/ConvNeXtUNet/: convnextv2.py  convnextv2_style_blocks.py  convnextv2_unet.py  utils.py
src/ConvNeXtUNet/losses/: MultiScaleLoss.py
src/Restorer/: CombinedPerceptualLoss.py  Cond_CHASPA.py  Cond_NAF.py  Cond_NAF_SSID.py  Cond_NAF_demosaic.py  Cond_NAF_demosaiced_input_test.py  Cond_NAF_original.py  Cond_NAF_ps.py  Restorer.py  debayering.py  tree_net.py  utils.py
src/Restorer/losses/: MultiScaleLoss.py
src/training/: DemosaicingDataset.py  RawDataset.py  RawDatasetDNG.py  RawDatasetDNG_load_into_memory.py  SmallRawDataset.py  SmallRawDatasetNumpy.py  VGGFeatureExtractor.py  align_images.py  censored_fit.py  image_utils.py  load_config.py  rggb_loop.py  sparse_loop.py  train_loop.py  utils.py
src/training/losses/: ShadowAwareLoss.py
tests/: load_and_run.py  test_load_and_run.py  test_loss_func.py
