[project]
name = "Restorer"
version = "0.0.1"
description = "A U-Net built for image restoration."
authors = [
    { name = "Ryan Mueller"},
]
readme = "README.md"
requires-python = ">=3.8" 
license = { file = "LICENSE" }
keywords = ["python", "Machine Learning", "U-Net", "Image Restoration", "CNN"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.18.0",
    "torchvision>=0.9.0",
    "timm>=0.3.2",
    ]

[project.optional-dependencies]
losses = [
    "torch_dct>=0.1.6",
    "kornia>=0.7.3",
    "lpips>=0.1.4",
    "pytorch_msssim>=1.0.0",
    ]

[project.urls]
"Homepage" = "NA"
"Bug Tracker" = "NA/issues"

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools.packages.find]
where = ["src"]


